--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -41,17 +42,46 @@ set_real_ip_from 2001:67c:289c:4::77;
 set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
 set_real_ip_from 2001:67c:289c:4::80;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:173;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:174;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:175;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:176;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:177;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:178;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:179;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:180;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:181;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:182;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:183;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:184;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:185;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:186;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:187;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:191;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:192;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:193;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:194;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:195;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:196;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:197;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:198;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:199;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:200;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:201;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:202;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:203;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:208;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:209;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:210;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:211;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:212;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:213;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:214;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:215;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:216;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:217;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:218;
+set_real_ip_from 2001:67c:6ec:203:192:42:116:219;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
