--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -76,7 +76,6 @@ deny 107.189.5.19;
 deny 107.189.5.7;
 deny 107.189.6.124;
 deny 107.189.6.246;
-deny 107.189.6.57;
 deny 107.189.7.114;
 deny 107.189.7.141;
 deny 107.189.7.144;
@@ -287,7 +286,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -313,6 +311,14 @@ deny 185.195.71.8;
 deny 185.195.71.9;
 deny 185.207.107.130;
 deny 185.207.107.216;
+deny 185.220.100.240;
+deny 185.220.100.241;
+deny 185.220.100.242;
+deny 185.220.100.243;
+deny 185.220.100.252;
+deny 185.220.100.253;
+deny 185.220.100.254;
+deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
@@ -872,6 +878,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -895,6 +902,7 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -997,7 +1005,6 @@ deny 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
 deny 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
-deny 2605:6400:30:f763::2;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7ca::2;
@@ -1129,6 +1136,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1171,6 +1179,14 @@ deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:13::1;
+deny 2a0b:f4c0:16c:14::1;
+deny 2a0b:f4c0:16c:15::1;
+deny 2a0b:f4c0:16c:16::1;
+deny 2a0b:f4c0:16c:2::1;
+deny 2a0b:f4c0:16c:3::1;
+deny 2a0b:f4c0:16c:4::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1400,7 +1416,6 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
 deny 41.216.183.87;
-deny 44.209.50.177;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1494,6 +1509,7 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
+deny 52.21.215.27;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.103.190;
@@ -1515,6 +1531,7 @@ deny 5.255.97.221;
 deny 5.255.98.151;
 deny 5.255.98.198;
 deny 5.255.98.23;
+deny 5.255.99.108;
 deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
@@ -1583,9 +1600,6 @@ deny 80.94.92.106;
 deny 81.16.33.42;
 deny 81.17.28.95;
 deny 82.118.242.36;
-deny 82.153.138.119;
-deny 82.153.138.208;
-deny 82.153.138.24;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
@@ -1684,11 +1698,6 @@ deny 94.16.116.81;
 deny 94.16.116.86;
 deny 94.16.121.226;
 deny 94.16.121.91;
-deny 94.177.106.37;
-deny 94.177.106.46;
-deny 94.177.106.54;
-deny 94.177.106.55;
-deny 94.177.106.59;
 deny 94.228.163.25;
 deny 94.228.169.70;
 deny 94.230.208.147;
