--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -179,6 +179,10 @@ allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
+allow 171.25.193.20;
+allow 171.25.193.234;
+allow 171.25.193.235;
+allow 171.25.193.25;
 allow 172.104.164.133;
 allow 172.104.182.84;
 allow 172.104.214.41;
@@ -720,6 +724,10 @@ allow 2001:638:301:f732::150;
 allow 2001:678:6d4:5130::2;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
+allow 2001:67c:289c::20;
+allow 2001:67c:289c:2::234;
+allow 2001:67c:289c:2::235;
+allow 2001:67c:289c::25;
 allow 2001:67c:6ec:203:192:42:116:173;
 allow 2001:67c:6ec:203:192:42:116:174;
 allow 2001:67c:6ec:203:192:42:116:175;
@@ -816,6 +824,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 209.127.245.250;
 allow 209.135.168.10;
 allow 209.135.168.56;
 allow 209.141.32.198;
@@ -1152,6 +1161,10 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:150:6::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1509,7 +1522,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.21.215.27;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.190;
@@ -1540,6 +1552,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.198.46.59;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1614,6 +1627,10 @@ allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.252.120.163;
+allow 84.54.51.61;
+allow 84.54.51.64;
+allow 84.54.51.68;
+allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.204.116.92;
 allow 85.204.116.93;
