--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -179,6 +179,10 @@ set_real_ip_from 163.5.143.76;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
+set_real_ip_from 171.25.193.20;
+set_real_ip_from 171.25.193.234;
+set_real_ip_from 171.25.193.235;
+set_real_ip_from 171.25.193.25;
 set_real_ip_from 172.104.164.133;
 set_real_ip_from 172.104.182.84;
 set_real_ip_from 172.104.214.41;
@@ -720,6 +724,10 @@ set_real_ip_from 2001:638:301:f732::150;
 set_real_ip_from 2001:678:6d4:5130::2;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
+set_real_ip_from 2001:67c:289c::20;
+set_real_ip_from 2001:67c:289c:2::234;
+set_real_ip_from 2001:67c:289c:2::235;
+set_real_ip_from 2001:67c:289c::25;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:173;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:174;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:175;
@@ -816,6 +824,7 @@ set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
 set_real_ip_from 205.185.127.231;
+set_real_ip_from 209.127.245.250;
 set_real_ip_from 209.135.168.10;
 set_real_ip_from 209.135.168.56;
 set_real_ip_from 209.141.32.198;
@@ -1152,6 +1161,10 @@ set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:150:6::1;
+set_real_ip_from 2a05:b0c7:6388::1;
+set_real_ip_from 2a05:b0c7:67c6::1;
+set_real_ip_from 2a05:b0c7:6949::1;
+set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -1509,7 +1522,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.21.215.27;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.190;
@@ -1540,6 +1552,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.198.46.59;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1614,6 +1627,10 @@ set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.252.120.163;
+set_real_ip_from 84.54.51.61;
+set_real_ip_from 84.54.51.64;
+set_real_ip_from 84.54.51.68;
+set_real_ip_from 84.54.51.69;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.204.116.92;
 set_real_ip_from 85.204.116.93;
